Only show the log in pop up for larger screens. For some reason, on smaller screens, the pop up would render but the user was still taken to /log_in. Also, no longer user a pop up window when deleting a user's account.

--- a/src/main/webapp/resources/css/style.css
+++ b/src/main/webapp/resources/css/style.css
@@ -1136,7 +1136,7 @@
 		margin: 10% auto;
 		padding: 20px;
 		border: 1px solid #888;
-		width: 30%;
+		width: 600px;
 		box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
 		-webkit-animation-name: animatetop;
 		-webkit-animation-duration: 0.4s;
